force-app/main/default/objects/Application__c/fields/Nominee_s_Honours__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Honours__c</fullName>
    <label>Nominee&apos;s Honours</label>
    <type>TextArea</type>
</CustomField>