force-app/main/default/objects/Application__c/fields/Nominee_s_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Nationality__c</fullName>
    <label>Nominee&apos;s Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>