force-app/main/default/objects/Application__c/fields/Nominee_s_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Postcode__c</fullName>
    <label>Nominee&apos;s Postcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>