force-app/main/default/objects/Application__c/fields/Nominee_s_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Telephone_Number__c</fullName>
    <label>Nominee&apos;s Telephone Number</label>
    <type>Phone</type>
</CustomField>