force-app/main/default/objects/Application__c/fields/Nominee_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Title__c</fullName>
    <label>Nominee&apos;s Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
                <default>true</default>
                <label>Mr.</label>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>