force-app/main/default/objects/Application__c/fields/Novelty_of_the_Proposal_up_to_300_words__c.field-meta.xml
<CustomField>
    <fullName>Novelty_of_the_Proposal_up_to_300_words__c</fullName>
    <inlineHelpText>Novelty of the Proposal (up to 300 words)</inlineHelpText>
    <label>Novelty of the Proposal</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>