force-app/main/default/objects/Application__c/fields/Number_of_corresponding_author_publi__c.field-meta.xml
<CustomField>
    <fullName>Number_of_corresponding_author_publi__c</fullName>
    <inlineHelpText>Number of corresponding author publications</inlineHelpText>
    <label>Number of corresponding author publi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>