force-app/main/default/objects/Application__c/fields/Number_of_first_author_publications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_first_author_publications__c</fullName>
    <label>Number of first author publications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>