force-app/main/default/objects/Application__c/fields/Online_link_s_of_three_published_storie__c.field-meta.xml
<CustomField>
    <fullName>Online_link_s_of_three_published_storie__c</fullName>
    <description>Online link(s) of three published stories (preferably in the field of biological sciences/health/scientific research/science policy)</description>
    <inlineHelpText>Online link(s) of three published stories (preferably in the field of biological sciences/health/scientific research/science policy)</inlineHelpText>
    <label>Online link(s) of three published storie</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>