force-app/main/default/objects/Application__c/fields/Organisati_UK_India__c.field-meta.xml
<CustomField>
    <fullName>Organisati_UK_India__c</fullName>
    <inlineHelpText>Organisation(India Or UK)</inlineHelpText>
    <label>Organisation(India Or UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>