force-app/main/default/objects/Application__c/fields/Organisatio_UK__c.field-meta.xml
<CustomField>
    <fullName>Organisatio_UK__c</fullName>
    <inlineHelpText>Organisation(UK)</inlineHelpText>
    <label>Organisation(UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>