force-app/main/default/objects/Application__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <formula>CreatedBy.Organisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation</label>
    <type>Text</type>
</CustomField>