force-app/main/default/objects/Application__c/fields/Organisation_Position_Head__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Position_Head__c</fullName>
    <inlineHelpText>(please include department if relevant)</inlineHelpText>
    <label>Organisation(Position Head)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>