force-app/main/default/objects/Application__c/fields/Organizatio_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Organizatio_Qualification__c</fullName>
    <inlineHelpText>(please include department if relevant)</inlineHelpText>
    <label>Organisation(Qualification)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>