force-app/main/default/objects/Application__c/fields/Organization_India__c.field-meta.xml
<CustomField>
    <fullName>Organization_India__c</fullName>
    <inlineHelpText>Organization(India)</inlineHelpText>
    <label>Organization(India)</label>
    <type>TextArea</type>
</CustomField>