force-app/main/default/objects/Application__c/fields/PDF_Generation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Date_Time__c</fullName>
    <label>PDF Generation Date/Time</label>
    <type>DateTime</type>
</CustomField>