force-app/main/default/objects/Application__c/fields/plans_for_archiving_and_preserving_data__c.field-meta.xml
<CustomField>
    <fullName>plans_for_archiving_and_preserving_data__c</fullName>
    <inlineHelpText>plans for archiving and preserving data/samples in the longer term</inlineHelpText>
    <label>plans for archiving and preserving data</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>