force-app/main/default/objects/Application__c/fields/Please_name_a_recent_scientific_publicat__c.field-meta.xml
<CustomField>
    <fullName>Please_name_a_recent_scientific_publicat__c</fullName>
    <description>Please name a recent scientific publication that you enjoyed reading and explain why you liked it (in less than 1500 characters)</description>
    <inlineHelpText>Please name a recent scientific publication that you enjoyed reading and explain why you liked it (in less than 1500 characters)</inlineHelpText>
    <label>Please name a recent scientific publicat</label>
    <length>1499</length>
    <type>LongTextArea</type>
</CustomField>