force-app/main/default/objects/Application__c/fields/Please_select_the_course_would_you_like__c.field-meta.xml
<CustomField>
    <fullName>Please_select_the_course_would_you_like__c</fullName>
    <description>You are requested to remember which course you applied for.</description>
    <inlineHelpText>You are requested to remember which course you applied for.</inlineHelpText>
    <label>Please select the course would you like</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-20 &amp; 22 March 2019 I New Delhi</fullName>
            </value>
            <value>
                <fullName>25-28 March 2019 I Hyderabad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>