force-app/main/default/objects/Application__c/fields/Please_specify_if_you_have_attended_any__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_if_you_have_attended_any__c</fullName>
    <inlineHelpText>Please specify if you have attended any other conference or workshop in the field of research management, in India or overseas in the last 4 years</inlineHelpText>
    <label>Please specify if you have attended any</label>
    <type>TextArea</type>
</CustomField>