force-app/main/default/objects/Application__c/fields/Please_specify_the_resource_materials__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_the_resource_materials__c</fullName>
    <inlineHelpText>Please specify the resource materials used in preparing this project</inlineHelpText>
    <label>Please specify the resource materials</label>
    <type>TextArea</type>
</CustomField>