force-app/main/default/objects/Application__c/fields/Preference_list_for_host_Institutions__c.field-meta.xml
<CustomField>
    <fullName>Preference_list_for_host_Institutions__c</fullName>
    <label>Preference list for host Institutions</label>
    <type>TextArea</type>
</CustomField>