force-app/main/default/objects/Application__c/fields/Preferred_start_date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_start_date__c</fullName>
    <label>Preferred start date of grant (if succes</label>
    <type>Date</type>
</CustomField>