force-app/main/default/objects/Application__c/fields/Preferred_start_date_IRMIRM_Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Preferred_start_date_IRMIRM_Fellowship__c</fullName>
    <inlineHelpText>Preferred start date of grant (if successful)</inlineHelpText>
    <label>Preferred start date(IRMIRM Fellowship)</label>
    <type>Date</type>
</CustomField>