force-app/main/default/objects/Application__c/fields/Presentations_of_Research_Management__c.field-meta.xml
<CustomField>
    <fullName>Presentations_of_Research_Management__c</fullName>
    <inlineHelpText>Presentations at conferences in the field of research management, in India or overseas, in the last 5 years</inlineHelpText>
    <label>Presentations of Research Management</label>
    <type>TextArea</type>
</CustomField>