force-app/main/default/objects/Application__c/fields/Principal_Investigator_UK__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_UK__c</fullName>
    <inlineHelpText>Principal Investigator (person receiving the funds)</inlineHelpText>
    <label>Principal Investigator(UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>