force-app/main/default/objects/Application__c/fields/Proposed_Research_use_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Research_use_of_Animals__c</fullName>
    <inlineHelpText>Does the proposed research involve the use of animals?</inlineHelpText>
    <label>Proposed Research use of Animals?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>