force-app/main/default/objects/Application__c/fields/Proposed_work_involve_human_tissue__c.field-meta.xml
<CustomField>
    <fullName>Proposed_work_involve_human_tissue__c</fullName>
    <inlineHelpText>Does the proposed work involve human tissue/biopsy samples?</inlineHelpText>
    <label>Proposed work involve human tissue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>