force-app/main/default/objects/Application__c/fields/Provide_a_summary_of_your_current__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_summary_of_your_current__c</fullName>
    <description>Provide a summary of your current research project (in less than 1500 characters)</description>
    <inlineHelpText>Provide a summary of your current research project (in less than 1500 characters)</inlineHelpText>
    <label>Provide a summary of your current</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>