force-app/main/default/objects/Application__c/fields/Provide_any_Additional_Information_IP__c.field-meta.xml
<CustomField>
    <fullName>Provide_any_Additional_Information_IP__c</fullName>
    <inlineHelpText>Please provide any additional information we should be aware of regarding the IP position of the proposed research</inlineHelpText>
    <label>Provide any Additional Information IP?</label>
    <type>TextArea</type>
</CustomField>