force-app/main/default/objects/Application__c/fields/Publications_of_Research_Management__c.field-meta.xml
<CustomField>
    <fullName>Publications_of_Research_Management__c</fullName>
    <inlineHelpText>Publications in the field of research management, in the last 5 years</inlineHelpText>
    <label>Publications of Research Management</label>
    <type>TextArea</type>
</CustomField>