force-app/main/default/objects/Application__c/fields/Rationale_behind_developing_a_central_re__c.field-meta.xml
<CustomField>
    <fullName>Rationale_behind_developing_a_central_re__c</fullName>
    <inlineHelpText>Rationale behind developing a central research office at host institution</inlineHelpText>
    <label>Rationale behind developing a central</label>
    <type>TextArea</type>
</CustomField>