force-app/main/default/objects/Application__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <displayFormat>71{0000}</displayFormat>
    <label>Ref No.</label>
    <type>AutoNumber</type>
</CustomField>