force-app/main/default/objects/Application__c/fields/Relevant_publications__c.field-meta.xml
<CustomField>
    <fullName>Relevant_publications__c</fullName>
    <inlineHelpText>•	Vancouver style;
•	Underline publications where you are first author;
•	Indicate with an Asterix the publications where you are a corresponding author</inlineHelpText>
    <label>Relevant publications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>