force-app/main/default/objects/Application__c/fields/Relevant_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Work_Experience__c</fullName>
    <label>Relevant Work Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>