force-app/main/default/objects/Application__c/fields/Research_Ethics_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Research_Ethics_Application_Status__c</fullName>
    <inlineHelpText>Research Ethics Application Status</inlineHelpText>
    <label>Research Ethics Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>