force-app/main/default/objects/Application__c/fields/Research_Ethics_Human_Stem_Cell__c.field-meta.xml
<CustomField>
    <fullName>Research_Ethics_Human_Stem_Cell__c</fullName>
    <label>Research Ethics Human Stem Cell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>