force-app/main/default/objects/Application__c/fields/Research_Ethics_Ref_Q_3__c.field-meta.xml
<CustomField>
    <fullName>Research_Ethics_Ref_Q_3__c</fullName>
    <label>Research Ethics (Ref Q:3)</label>
    <type>TextArea</type>
</CustomField>