force-app/main/default/objects/Application__c/fields/Research_Ethics_Service_Human_Stem__c.field-meta.xml
<CustomField>
    <fullName>Research_Ethics_Service_Human_Stem__c</fullName>
    <inlineHelpText>Does the work require approval from the appropriate research ethics service?</inlineHelpText>
    <label>Research Ethics Service?(Human Stem)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>