force-app/main/default/objects/Application__c/fields/Research_Project_CRUK_Lead_CoInves__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_CRUK_Lead_CoInves__c</fullName>
    <inlineHelpText>Research Project Tittle (CRUK Lead or Co-Investigator)</inlineHelpText>
    <label>Research Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>