force-app/main/default/objects/Application__c/fields/Research_Project_Ti_DBT_lead_Coinvest__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Ti_DBT_lead_Coinvest__c</fullName>
    <inlineHelpText>Research Project Title(DBT Lead Or Co-Investigator)</inlineHelpText>
    <label>Research Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>