force-app/main/default/objects/Application__c/fields/Research_Project_Tit_DBT_Lead__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Tit_DBT_Lead__c</fullName>
    <inlineHelpText>Research Project Title(DBT Lead)</inlineHelpText>
    <label>Research Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>