force-app/main/default/objects/Application__c/fields/Research_Project_Title_Cruk_Lead__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Title_Cruk_Lead__c</fullName>
    <inlineHelpText>Current CRUK Support (as Lead Applicant)</inlineHelpText>
    <label>Research Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>