force-app/main/default/objects/Application__c/fields/Ro_India_UK__c.field-meta.xml
<CustomField>
    <fullName>Ro_India_UK__c</fullName>
    <inlineHelpText>Role(India Or UK)</inlineHelpText>
    <label>Role(India Or UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>