force-app/main/default/objects/Application__c/fields/Rol_UK__c.field-meta.xml
<CustomField>
    <fullName>Rol_UK__c</fullName>
    <inlineHelpText>Role(UK)</inlineHelpText>
    <label>Role(UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>