force-app/main/default/objects/Application__c/fields/Role_India__c.field-meta.xml
<CustomField>
    <fullName>Role_India__c</fullName>
    <inlineHelpText>Role(India)</inlineHelpText>
    <label>Role(India)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>