force-app/main/default/objects/Application__c/fields/Role_of_Supporting_Participant__c.field-meta.xml
<CustomField>
    <fullName>Role_of_Supporting_Participant__c</fullName>
    <label>Role of Supporting Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>