force-app/main/default/objects/Application__c/fields/Role_within_employing_institution_in_20__c.field-meta.xml
<CustomField>
    <fullName>Role_within_employing_institution_in_20__c</fullName>
    <inlineHelpText>Role within employing institution in 2019-2020</inlineHelpText>
    <label>Role within employing institution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>