force-app/main/default/objects/Application__c/fields/Scanned_copies_of_three_published_storie__c.field-meta.xml
<CustomField>
    <fullName>Scanned_copies_of_three_published_storie__c</fullName>
    <description>Scanned copies of three published stories (preferably in the field of biological sciences/health/scientific research/science policy)</description>
    <inlineHelpText>Scanned copies of three published stories (preferably in the field of biological sciences/health/scientific research/science policy)</inlineHelpText>
    <label>Scanned copies of three published storie</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>