force-app/main/default/objects/Application__c/fields/Scheme_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Id__c</fullName>
    <label>Scheme Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>