force-app/main/default/objects/Application__c/fields/Some_Funding__c.field-meta.xml
<CustomField>
    <fullName>Some_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Some Funding</label>
    <type>Checkbox</type>
</CustomField>