force-app/main/default/objects/Application__c/fields/Source_of_your_Current_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_your_Current_Funding__c</fullName>
    <label>Source of your Current Funding?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>