force-app/main/default/objects/Application__c/fields/Sponsor_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Address__c</fullName>
    <label>Sponsor&apos;s Address</label>
    <type>TextArea</type>
</CustomField>