force-app/main/default/objects/Application__c/fields/Sponsor_s_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Address_line_1__c</fullName>
    <label>Sponsor&apos;s Address line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>