force-app/main/default/objects/Application__c/fields/Sponsor_s_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_City_Town__c</fullName>
    <label>Sponsor&apos;s City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>