force-app/main/default/objects/Application__c/fields/Sponsor_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Date_of_Birth__c</fullName>
    <label>Sponsor&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>