force-app/main/default/objects/Application__c/fields/Sponsor_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Email_Address__c</fullName>
    <label>Sponsor&apos;s Email Address</label>
    <type>Email</type>
</CustomField>