force-app/main/default/objects/Application__c/fields/Sponsor_s_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Expertise__c</fullName>
    <label>Sponsor&apos;s Expertise</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>