force-app/main/default/objects/Application__c/fields/Sponsor_s_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Nationality__c</fullName>
    <label>Sponsor&apos;s Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>