force-app/main/default/objects/Application__c/fields/Sponsor_s_Position__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_s_Position__c</fullName>
    <label>Sponsor&apos;s Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>