force-app/main/default/objects/Application__c/fields/Sponsor_Title__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Title__c</fullName>
    <label>Sponsor Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
                <default>true</default>
                <label>Mr.</label>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>