force-app/main/default/objects/Application__c/fields/Start_date_of_current_affliation__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_current_affliation__c</fullName>
    <label>Start date of current affliation</label>
    <type>Date</type>
</CustomField>