force-app/main/default/objects/Application__c/fields/Statement_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_interest__c</fullName>
    <label>Statement of interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>