force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pre-Submission</fullName>
            </value>
            <value>
                <fullName>Post-Submission</fullName>
            </value>
            <value>
                <fullName>Awaited Signatory Approval</fullName>
            </value>
            <value>
                <fullName>Pending Submission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Defered</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
                <isActive>false</isActive>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>Modifying</fullName>
                <isActive>false</isActive>
                <label>Modifying</label>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
                <isActive>false</isActive>
                <label>Pre-Approved</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
            <value>
                <fullName>Submission Failed</fullName>
                <isActive>false</isActive>
                <label>Submission Failed</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>