force-app/main/default/objects/Application__c/fields/Status_of_license_covering_animal_usage__c.field-meta.xml
<CustomField>
    <fullName>Status_of_license_covering_animal_usage__c</fullName>
    <inlineHelpText>Status of license covering animal usage</inlineHelpText>
    <label>Status of license covering animal usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>