force-app/main/default/objects/Application__c/fields/Status_of_research_and_research_funding__c.field-meta.xml
<CustomField>
    <fullName>Status_of_research_and_research_funding__c</fullName>
    <inlineHelpText>Status of research and research funding at Host Institution</inlineHelpText>
    <label>Status of research and research funding</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>