force-app/main/default/objects/Application__c/fields/Strategies_for_sustainability__c.field-meta.xml
<CustomField>
    <fullName>Strategies_for_sustainability__c</fullName>
    <inlineHelpText>Strategies for sustainability (up to 300 words)</inlineHelpText>
    <label>Strategies for sustainability</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>