force-app/main/default/objects/Application__c/fields/Strengths_and_weaknesses_of_the_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Strengths_and_weaknesses_of_the_Proposal__c</fullName>
    <inlineHelpText>Strengths and weaknesses of the Proposal(up to 300 words)</inlineHelpText>
    <label>Strengths and weaknesses of the Proposal</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>