force-app/main/default/objects/Application__c/fields/Submit_date__c.field-meta.xml
<CustomField>
    <fullName>Submit_date__c</fullName>
    <label>Submit date</label>
    <type>Date</type>
</CustomField>