force-app/main/default/objects/Application__c/fields/Submitter_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_Email_Address__c</fullName>
    <label>Submitter&apos;s Email Address</label>
    <type>Email</type>
</CustomField>