force-app/main/default/objects/Application__c/fields/Submitter_s_IP__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_IP__c</fullName>
    <label>Submitter&apos;s IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>