force-app/main/default/objects/Application__c/fields/Submitter_s_Username__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_Username__c</fullName>
    <label>Submitter&apos;s Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>