force-app/main/default/objects/Application__c/fields/Suggestions_for_the_IRMI_initiative__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_the_IRMI_initiative__c</fullName>
    <label>Suggestions for the IRMI initiative</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>