force-app/main/default/objects/Application__c/fields/Suggestions_for_the_IRMI_program__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_the_IRMI_program__c</fullName>
    <inlineHelpText>Suggestions for the IRMI program and areas to be covered [Up to 100 words]</inlineHelpText>
    <label>Suggestions for the IRMI program</label>
    <type>TextArea</type>
</CustomField>