force-app/main/default/objects/Application__c/fields/Supervisor_s_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Address_Line_1__c</fullName>
    <label>Supervisor&apos;s Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>