force-app/main/default/objects/Application__c/fields/Supervisor_s_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Address_Line_2__c</fullName>
    <label>Supervisor&apos;s Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>