force-app/main/default/objects/Application__c/fields/Supervisor_s_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_City_Town__c</fullName>
    <label>Supervisor&apos;s City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>