force-app/main/default/objects/Application__c/fields/Supervisor_s_Country__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Country__c</fullName>
    <label>Supervisor&apos;s Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>