force-app/main/default/objects/Application__c/fields/Supervisor_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Date_of_Birth__c</fullName>
    <label>Supervisor&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>