force-app/main/default/objects/Application__c/fields/Supervisor_s_Department__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Department__c</fullName>
    <label>Supervisor&apos;s Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>