force-app/main/default/objects/Application__c/fields/Supervisor_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Email_Address__c</fullName>
    <label>Supervisor&apos;s Email Address</label>
    <type>Email</type>
</CustomField>